--- a/backend/ecommerce_backend/Dockerfile
+++ b/backend/ecommerce_backend/Dockerfile
@@ -3,9 +3,12 @@ FROM python:3.12-slim
 
 WORKDIR /app
 
+# Install dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Copy app code
 COPY . .
 
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+# Set entrypoint script as the container's startup command
+ENTRYPOINT ["/app/entrypoint.sh"]
