--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,18 @@
 version: '3.8'
 
 services:
-  backend:
-    build:
-      context: ./backend/ecommerce_backend
-      dockerfile: Dockerfile
-    volumes:
-      - ./backend/ecommerce_backend:/app
-    ports:
-      - "8000:8000"
-    depends_on:
-      - frontend
-    environment:
-      - PYTHONDONTWRITEBYTECODE=1
-      - PYTHONUNBUFFERED=1
-    command: >
-      sh -c "python manage.py migrate &&
-             python manage.py runserver 0.0.0.0:8000"
+backend:
+  build:
+    context: ./backend/ecommerce_backend
+    dockerfile: Dockerfile
+  volumes:
+    - ./backend/ecommerce_backend:/app
+  ports:
+    - "8000:8000"
+  environment:
+    - PYTHONDONTWRITEBYTECODE=1
+    - PYTHONUNBUFFERED=1
+  restart: unless-stopped
 
   frontend:
     build:
